Fixed word wrapping in footer

--- a/_sass/omegat.sass
+++ b/_sass/omegat.sass
@@ -159,7 +159,7 @@ footer .glyphicon
 footer ul li
   height: 28px
   list-style-type: none
-//  display: inline-block
+  white-space: nowrap
 
 .footer-copyright
   background-color: lighten($colorPrimary, 3%)
